<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/purple_200"
            android:textSize="16sp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@android:color/white">

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10sp"
                        app:layout_constraintTop_toBottomOf="@+id/cardView"
                        tools:ignore="MissingConstraints">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/tn21bz0897"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10sp"
                                android:padding="3sp"
                                android:text="@string/from_date"
                                android:textColor="@color/balck_light"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5sp"
                                android:text="@string/_08_06_2021"
                                android:textColor="@color/purple_500" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:padding="10sp"
                                android:text="@string/to_date"
                                android:textColor="@color/balck_light" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5sp"
                                android:text="@string/_15_06_2021"
                                android:textColor="@color/purple_500" />
                        </TableRow>

                    </TableLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <ScrollView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="vertical">
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableLayout
                            android:id="@+id/workshop_main_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="7sp"
                            tools:ignore="MissingConstraints">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="3sp"
                                    android:layout_weight="1"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/rowid"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textStyle="bold"
                                        android:text="@string/row_id"
                                        android:layout_weight="1" />
                                    <TextView
                                        android:id="@+id/vehicleId"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/vehicle_no"
                                        android:textStyle="bold"
                                        android:layout_marginStart="7dp"
                                        android:layout_weight="1" />

                                    <TextView
                                        android:id="@+id/topSpeed"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/topspeed"
                                        android:textStyle="bold"
                                        android:layout_marginStart="7dp"
                                        android:layout_weight="1" />

                                    <TextView
                                        android:id="@+id/topSpeedtime"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/topspeedtime"
                                        android:textStyle="bold"
                                        android:layout_marginStart="7dp"
                                        android:layout_weight="1" />



                                    <TextView
                                        android:id="@+id/totalParkedTime"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/totalparkedtime"
                                        android:textStyle="bold"
                                        android:layout_marginStart="7dp"
                                        android:layout_weight="1" />

                                    <TextView
                                        android:id="@+id/totalRunningTime"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/totalrunningtime"
                                        android:textStyle="bold"
                                        android:layout_marginStart="7dp"
                                        android:layout_weight="1" />
                                    <TextView
                                        android:id="@+id/address"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/address"
                                        android:textStyle="bold"
                                        android:layout_marginStart="7dp"
                                        android:layout_weight="1" />



                                </LinearLayout>
                            </TableRow>

                        </TableLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </HorizontalScrollView>

            </ScrollView>


        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
